components/m4-component/base/.tekton/build-webhook-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    build.appstudio.openshift.io/application: m4-app
    build.appstudio.openshift.io/build: "true"
    build.appstudio.openshift.io/component: m4-component
    build.appstudio.openshift.io/type: build
    build.appstudio.openshift.io/version: "0.1"
    pipelines.appstudio.openshift.io/type: build
  creationTimestamp: null
  name: elm4-component
  namespace: demo
spec:
  path: /
  port:
    targetPort: 8080
  to:
    kind: Service
    name: el-m4-component
    weight: null
status: {}
